--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,9 +1,6 @@
 .home {
-  position: absolute;
-  width: 1920px;
+  width: 100vw;
   height: 780px;
-  left: 0px;
-  top: 0px;
   background-image: linear-gradient(
       180deg,
       rgba(14, 17, 28, 0.8) 0%,
