--- a/src/Pages/OurWork/OurWorkMain.css
+++ b/src/Pages/OurWork/OurWorkMain.css
@@ -1,71 +1,82 @@
 .our-work-main {
-  width: 89.5vw;
+  width: 90vw;
   border: 2px solid rgb(0, 17, 255);
   height: 900px;
-}
-
-.our-work-top-part {
-  height: 153px;
-  border: 2px solid aqua;
 }
 
 .our-work-center {
   height: 747px;
   border: 5px solid rgb(255, 0, 0);
-}
-
-.filter-menu {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
 }
 
-.filter-menu-text {
-  width: 60px;
-  height: 16px;
+.our-work-main-left {
+  width: 40vw;
+  border: 2px solid orangered;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 3vw;
+  text-align: left;
+}
+
+.our-work-main-left h1 {
+  width: 193px;
+  height: 60px;
   font-family: "Nunito Sans";
   font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 30px;
   color: #1a1a1a;
 }
 
-.filter-category-button {
-  width: 120px;
-  height: 40px;
-  background: #ffffff;
-  border: 1px solid #ebebeb;
+.our-work-main-right {
+  width: 50vw;
+  border: 2px solid violet;
+}
+
+.paragraph-real-estate {
+  width: 426px;
+  height: 96px;
+  left: 260px;
+  top: 1247px;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #414141;
+}
+
+.real-estate-buttons {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 18vw;
+  height: 40px;
+  margin-top: 3vh;
+  gap: 10px;
 }
 
-.filter-category-button img {
-  height: 15px;
-  width: 16px;
+.real-estate-buttons button {
+  width: 10vw;
+  height: 40px;
 }
 
-.clear-filter-button {
-  width: 29px;
-  height: 16px;
-  font-family: "Nunito Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+.order-now-button {
+  background: #ffdb11;
+  border: none;
+}
+
+.how-it-works-button {
+  border: 2px solid #000000;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  text-decoration-line: underline;
-  color: #1a1a1a;
 }
 
-.our-work-top-part {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-start;
-    margin-left: 3vw;
+.how-it-works-button img {
+  height: 12px;
+  width: 11px;
 }
