--- a/src/Components/OurWorkMainLeft.css
+++ b/src/Components/OurWorkMainLeft.css
@@ -1,35 +1,33 @@
 .our-work-main-left {
   width: 30vw;
-  border: 2px solid orangered;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
   padding-left: 3vw;
   text-align: left;
+  box-sizing: border-box;
 }
 
 .our-work-main-left h1 {
-  width: 193px;
-  height: 60px;
+  width: 12vw;
+  min-height: 7vh;
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 22px;
-  line-height: 30px;
+  font-size: 2.4vh;
+  line-height: 3.3vh;
   color: #1a1a1a;
 }
 
-
-
 .paragraph-real-estate {
-  width: 426px;
-  height: 96px;
-  left: 260px;
-  top: 1247px;
+  width: 22vw;
+  min-height: 11vh;
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 1.3vmin;
   line-height: 16px;
   color: #414141;
 }
@@ -38,15 +36,16 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 18vw;
-  height: 40px;
+  flex-wrap: wrap;
+  width: 21vw;
+  min-height: 4.5vh;
   margin-top: 3vh;
-  gap: 10px;
+  gap: 1.1vh;
 }
 
 .real-estate-buttons button {
   width: 10vw;
-  height: 40px;
+  min-height: 4.5vh;
 }
 
 .order-now-button {
@@ -62,6 +61,6 @@
 }
 
 .how-it-works-button img {
-  height: 12px;
-  width: 11px;
+  min-height: 1.3vh;
+  width: 0.6vw;
 }
