--- a/src/Components/LeftColumn.css
+++ b/src/Components/LeftColumn.css
@@ -1,10 +1,10 @@
 .left-column {
   width: 10vw;
-  height: inherit;
+  height: 100vh;
 }
 
 .service-box {
-  height: 120px;
+  height: 13.3vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -14,17 +14,17 @@
 }
 
 .service-box img {
-  height: 30px;
+  height: 3.33vh;
 }
 
 .service-title {
-  width: 124px;
-  height: 32px;
+  width: 6.5vw;
+  height: 3.5vh;
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 1.33vh;
+  line-height: 1.77vh;
   text-align: center;
   color: rgba(26, 26, 26, 1);
 }
@@ -33,7 +33,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 27px;
+  height: 3vh;
 }
 
 .arrow-up {
@@ -41,12 +41,5 @@
   justify-content: center;
   align-items: center;
   color: rgba(231, 231, 231, 1);
-  height: 27px;
-
-}
-
-.sep-line{
-    color: red;
-    height: 10px;
-    width: 10px;
+  height: 3vh;
 }
