--- a/src/Components/OurWorkMainLeft.css
+++ b/src/Components/OurWorkMainLeft.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   padding-left: 3vw;
   text-align: left;
@@ -22,19 +23,20 @@
 }
 
 .paragraph-real-estate {
-  width: 22vw;
-  min-height: 11vh;
+  width: 22.2vw;
+  min-height: 10.7vh;
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 400;
-  font-size: 1.3vmin;
-  line-height: 16px;
+  font-size: 12px;
+  line-height: 16.37px;
   color: #414141;
+  border: 1px solid red;
 }
 
 .real-estate-buttons {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
   width: 21vw;
@@ -44,7 +46,7 @@
 }
 
 .real-estate-buttons button {
-  width: 10vw;
+  width: 7.8vw;
   min-height: 4.5vh;
 }
 
