--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,6 +1,125 @@
 .footer {
   height: 28.75vh;
   width: 100vw;
-  height: 28.33vh;
-  background: #292929;
+  background: rgb(41, 41, 41);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer ul {
+  list-style-type: none;
+}
+
+.container {
+  width: 91vw;
+  height: 100%;
+  background-color: rgb(41, 41, 41);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 100px;
+  font-size: 12px;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+.footer-col {
+  width: 6.1vw;
+  min-height: 13.34vh;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 2.22vh;
+  text-transform: uppercase;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.footer-col a {
+  font-size: 1.33vmin;
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  transition: all 0.3s ease;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.4vmin;
+  line-height: 0.33vh;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-col a:hover {
+  color: rgba(255, 226, 65, 1);
+  padding: 0 2px;
+}
+
+.social-links {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 12px;
+  color: #ffffff;
+  width: 10vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 10vh;
+  margin-bottom: 15px;
+}
+
+.social-links .contact i {
+  font-size: 18px;
+  margin-left: 3px;
+}
+
+.contact {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  font-size: 12px;
+}
+
+.clock {
+  display: flex;
+  justify-content: flex-start;
+  gap: 7px;
+  font-size: 12px;
+  margin-left: 1px;
+}
+
+.soc-media {
+  font-size: 15px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  margin-left: 3px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.soc-media a:hover {
+  color: rgba(255, 226, 65, 1);
+}
+
+/* ////// Footer responsive ///// */
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 574px) {
+  .footer-col {
+    width: 100%;
+  }
 }
