--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,6 +1,6 @@
 .header {
   width: 100vw;
-  height: 9.6vh;
+  height: 10%;
   display: flex;
   justify-content: space-around;
   align-items: center;
