--- a/src/Components/LastUpdatesText.css
+++ b/src/Components/LastUpdatesText.css
@@ -61,6 +61,17 @@
 .last-update-button {
   width: 150px;
   height: 40px;
-  background: rgb(255, 219, 17);
+  background: rgba(255, 219, 17, 0.7);
+  border: none;
+  transition: all 0.3s ease;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  color: rgb(0, 0, 0);
+}
+
+.last-update-button:hover {
+  background: rgba(255, 219, 17, 1);
   border: none;
 }
