--- a/src/Components/OurWorkMainLeft.css
+++ b/src/Components/OurWorkMainLeft.css
@@ -1,6 +1,5 @@
 .our-work-main-left {
-  width: 30vw;
-  height: 100%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
