--- a/src/Components/OurWorkTop.css
+++ b/src/Components/OurWorkTop.css
@@ -1,5 +1,5 @@
 .our-work-top-part {
-  height: 20vh;
+  height: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
