--- a/src/Components/ServicingAreaheader.css
+++ b/src/Components/ServicingAreaheader.css
@@ -1,6 +1,5 @@
 .servicing-header {
   height: 12.25vh;
-  width: 100vw;
   background: #f5f5f5;
   display: flex;
   justify-content: center;
@@ -8,7 +7,7 @@
 }
 
 .servicing-header h1 {
-  width: 13vw;
+  width: 13%;
   min-height: 3.78vh;
   font-family: "Nunito Sans";
   font-style: normal;
