--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,5 +1,5 @@
 .header {
-  padding-top: 20px;
+  height: 10%;
   display: flex;
   justify-content: space-around;
 }
@@ -11,15 +11,18 @@
 .header-mid {
   width: 21.2vw;
   min-height: 2.3vh;
-  font-family: "Nunito Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 18px;
-  color: #ffffff;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.header-mid p {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 0.677vw;
+  line-height: 18px;
+  color: #ffffff;
 }
 
 .header-right {
@@ -30,12 +33,11 @@
 }
 
 .telephone {
-  width: 80px;
+  width: 5vw;
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 600;
-  font-size: 11px;
-  line-height: 15px;
+  font-size: 0.573vw;
   color: #ffffff;
 }
 
@@ -47,8 +49,8 @@
 }
 
 .telephone-box img {
-  height: 12px;
-  width: 8.7px;
+  height: 0.625vw;
+  width: 0.453vw;
 }
 
 .cart-icon-text {
