--- a/src/Components/PricingMain.css
+++ b/src/Components/PricingMain.css
@@ -1,4 +1,8 @@
 .pricing-main {
-background-color: red;
-height: 80%;
+background-color: white;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 92%;
+box-sizing: border-box;
 }
