--- a/src/Pages/LastUpdates/LastUpdates.css
+++ b/src/Pages/LastUpdates/LastUpdates.css
@@ -1,8 +1,9 @@
 .last-updates {
-  min-height: 90vh;
+  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
+ 
 }
 
 .last-updates-left-half {
