--- a/src/Components/PricingMain.css
+++ b/src/Components/PricingMain.css
@@ -3,6 +3,7 @@ background-color: white;
 display: flex;
 justify-content: center;
 align-items: center;
-height: 92%;
+height: 82%;
+width: 100%;
 box-sizing: border-box;
 }
