feat: update the structure, links, and dynamically style the add to cart  button

--- a/src/Components/Pricing/PricePack.css
+++ b/src/Components/Pricing/PricePack.css
@@ -115,6 +115,11 @@
   gap: 1vh;
 }
 
+.button-added{
+  background-color: black;
+  color: white;
+}
+
 .check-true {
   background-color: yellow;
   border-radius: 50%;
