--- a/src/Pages/AdditionalServices/AdditionalServices.css
+++ b/src/Pages/AdditionalServices/AdditionalServices.css
@@ -1,32 +1,112 @@
-.additional-services{
-    width: 100%;
-    height: 54vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+.additional-services {
+  width: 100%;
+  height: 54vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.additional-services-text{
-    display: flex;
-     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.additional-services-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.additional-services-cards{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid red;
-    height: 60%;
+.additional-services-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+  gap: 1vw;
 }
 
-.single-additional-card{
-    width: 14.6vw;
-    height: 100%;
-    border: 1px solid black;
-       display: flex;
-    justify-content: center;
-    align-items: center;
+.single-additional-card {
+  width: 14.5vw;
+  height: 100%;
+  border: 1px solid rgba(231, 231, 231, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+
+.single-additional-card img {
+  width: 18%;
+  height: 15%;
+}
+
+.single-additional-card h2 {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px;
+  /* identical to box height */
+
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #1a1a1a;
+}
+
+.price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.price h1 {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+
+  color: #1a1a1a;
+}
+
+.price p {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 14px;
+  color: #1a1a1a;
+}
+
+.additional-services-button {
+  width: 55%;
+  height: 15%;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px;
+  color: #1a1a1a;
+}
+
+.single-additional-card ul {
+  list-style: none;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #6f6f6f;
+  text-align: left;
+}
+
+.single-additional-card ul li::before {
+  content: "• ";
+  color: yellow;
+}
+
+.quick-preview-button {
+  width: 100%;
+  height: 12%;
+  background-color: rgb(200, 200, 200);
+  border: none;
 }
