--- a/src/Pages/AdditionalServices/AdditionalServices.css
+++ b/src/Pages/AdditionalServices/AdditionalServices.css
@@ -14,6 +14,16 @@
   align-items: center;
 }
 
+.additional-services-text h1 {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2.78vh;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #000000;
+}
+
 .additional-services-cards {
   display: flex;
   justify-content: center;
@@ -34,8 +44,8 @@
 }
 
 .single-additional-card img {
-  width: 18%;
-  height: 15%;
+  width: 12%;
+  height: 10%;
 }
 
 .single-additional-card h2 {
@@ -44,11 +54,8 @@
   font-weight: 600;
   font-size: 13px;
   line-height: 18px;
-  /* identical to box height */
-
   text-align: center;
   text-transform: uppercase;
-
   color: #1a1a1a;
 }
 
@@ -64,7 +71,6 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 27px;
-
   color: #1a1a1a;
 }
 
