--- a/src/Components/Pricing/PricePack.css
+++ b/src/Components/Pricing/PricePack.css
@@ -3,10 +3,11 @@
   height: 70vh;
   display: flex;
   border-collapse: collapse;
+  justify-content: center;
 }
 
 .price-table-left-column {
-  width: 30%;
+  width: 25%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -121,7 +122,7 @@
 }
 
 .check-true {
-  background-color: yellow;
+  background-color: rgba(255, 219, 17, 1);
   border-radius: 50%;
   width: 15%;
   height: 50%;
