--- a/src/Components/Pricing/PricingTop.css
+++ b/src/Components/Pricing/PricingTop.css
@@ -19,11 +19,9 @@
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 25px;
-  line-height: 34px;
+  font-size: 2.77vh;
   letter-spacing: 0.05em;
   text-transform: uppercase;
-
   color: #000000;
 }
 
@@ -38,6 +36,5 @@
   font-size: 12px;
   line-height: 16px;
   text-align: center;
-
   color: #6f6f6f;
 }
