--- a/src/Components/OurWork/OurWorkTop.css
+++ b/src/Components/OurWork/OurWorkTop.css
@@ -4,7 +4,19 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
-  margin-left: 3vw;
+  padding-left: 3vw;
+width: 90%;
+}
+
+.our-work-top-part h1 {
+font-family: 'Nunito Sans';
+font-style: normal;
+font-weight: bolder;
+font-size: 2.78vh;
+line-height: 34px;
+letter-spacing: 0.05em;
+text-transform: uppercase;
+color: #000000;
 }
 
 .filter-menu {
@@ -26,13 +38,14 @@
 }
 
 .filter-category-button {
-  width: 120px;
+  width: 7vw;
   height: 40px;
   background: #ffffff;
   border: 1px solid #ebebeb;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  gap: 10px;
 }
 
 .filter-category-button img {
