--- a/src/Components/OurWork/OurWorkTop.css
+++ b/src/Components/OurWork/OurWorkTop.css
@@ -2,7 +2,7 @@
   height: 20%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: flex-start;
   padding-left: 3vw;
 width: 90%;
